Some stuff that Nathan told me to do

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@rails/webpacker": "^5.2.1",
     "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
