--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "@rails/webpacker": "^5.2.1"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "@rails/webpacker": "^5.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
-} 
+}
